# PyNLO

./: .gitignore  README.md  README.rst  REAME.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: environment.yml
docs/source/: api.rst  conf.py
docs/source/api/: pynlo.light.Pulse.FromFreqRange.rst  pynlo.light.Pulse.__init__.rst  pynlo.light.Pulse.dt.rst  pynlo.light.Pulse.dv.rst  pynlo.light.Pulse.n.rst  pynlo.light.Pulse.rdt.rst  pynlo.light.Pulse.rdv.rst  pynlo.light.Pulse.rn.rst  pynlo.light.Pulse.rn_range.rst  pynlo.light.Pulse.rn_slice.rst  pynlo.light.Pulse.rst  pynlo.light.Pulse.rt_grid.rst  pynlo.light.Pulse.rt_ref.rst  pynlo.light.Pulse.rt_window.rst  pynlo.light.Pulse.rtf_grids.rst  pynlo.light.Pulse.rv_grid.rst  pynlo.light.Pulse.rv_ref.rst  pynlo.light.Pulse.rv_window.rst  pynlo.light.Pulse.t_grid.rst  pynlo.light.Pulse.t_ref.rst  pynlo.light.Pulse.t_window.rst  pynlo.light.Pulse.v_grid.rst  pynlo.light.Pulse.v_ref.rst  pynlo.light.Pulse.v_window.rst  pynlo.medium.Mode.__init__.rst  pynlo.medium.Mode.rst  pynlo.model.Model.__init__.rst  pynlo.model.Model.rst  pynlo.model.NLSE.__init__.rst  pynlo.model.NLSE.estimate_step_size.rst  pynlo.model.NLSE.linear_operator.rst  pynlo.model.NLSE.rst  pynlo.model.NLSE.simulate.rst  pynlo.model.NLSE.step.rst  pynlo.model.NLSE.update_poling.rst  pynlo.model.UPE.__init__.rst  (+9 more)
examples/: optical-solitons.py  phase-matching.py  ppln_cascaded-chi2.py  silica-pcf_supercontinuum.py
pynlo/: __init__.py  light.py
pynlo/utility/: __init__.py  chi2.py  fft.py
tests/: test_light.py  test_utility.py
