[build-system]
requires = ["setuptools", "unidep"]
requires-python = ">=3.12,<3.13"
build-backend = "setuptools.build_meta"

[project]
name = "pynlo"
description = "Python nonlinear optics"
readme = "README.md"
license = {file = "COPYING.LESSER.txt"}
dependencies = [
    "numpy>=1,<2",
    "scipy>=1,<2",
    "numba<1",
    "mkl_fft>=1.3,<2"
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pynlo.__version__"}

# -------------------------
# unidep configuration
# -------------------------
[tool.unidep]
channels = ["conda-forge"]

dependencies = [
    "python>=3.12,<3.13",
    "numpy>=1,<2",
    "scipy>=1,<2",
    "numba<1",
    { conda = "mkl_fft>=1.3,<2", pip = "mkl-fft>=1.3,<2" }
]
