[build-system]
requires = ["setuptools", "unidep"]
requires-python = ">=3.12,<3.13"
build-backend = "setuptools.build_meta"

[project]
name = "pynlo"
description = "Python nonlinear optics"
readme = "README.md"
license = {file = "COPYING.LESSER.txt"}
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pynlo.__version__"}

# -------------------------
# unidep configuration
# -------------------------
[tool.unidep]
channels = ["conda-forge"]

dependencies = [
    "python>=3.14,<3.15",
    "numpy>=2,<3",
    "scipy>=1,<2",
    "numba<1",
    {conda="pyfftw=0.15.1"},
    "matplotlib"
]
